--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,12 @@ inputs:
   github-token:
     description: 'Token to access GitHub APIs.'
     required: true
+  git-user:
+    description: 'Git user name for creating commit.'
+    required: false
+  git-email:
+    description: 'Git user email for creating commit.'
+    required: false
 runs:
   using: 'node12'
   main: 'dist/index.js'
