--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@actions/github": "^4.0.0",
     "@actions/io": "^1.0.2",
     "@iarna/toml": "^2.2.5",
+    "gray-matter": "^4.0.3",
     "js-yaml": "^3.14.1",
     "simple-git": "^2.31.0"
   },
